--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,11 @@ spring.datasource.username=developer
 spring.datasource.password=brasfortsafedb8103
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
 #------------------------------------------------------
 
 server.port=8080
